--- a/src/app.html
+++ b/src/app.html
@@ -3,6 +3,8 @@
 	<head>
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/favicon/favicon.ico" />
+		<link rel="canonical" href="https://yuxxeun.now.sh"/>
+		<link rel="apple-touch-icon" href="/favicon/favicon.ico">
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		%sveltekit.head%
 	</head>
