seo: meta robots

--- a/src/app.html
+++ b/src/app.html
@@ -6,6 +6,7 @@
 		<link rel="canonical" href="https://yuxxeun.now.sh"/>
 		<link rel="apple-touch-icon" href="/favicon/favicon.ico">
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
+<meta name="robots" content="noindex, nofollow" />
 		%sveltekit.head%
 	</head>
 	<body data-theme="">
