--- a/src/app.html
+++ b/src/app.html
@@ -4,9 +4,11 @@
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/favicon/favicon.ico" />
 		<link rel="canonical" href="https://yuxxeun.now.sh"/>
-		<link rel="apple-touch-icon" href="/favicon/favicon.ico">
+		<link rel="apple-touch-icon" href="/favicon/favicon.ico" />
+		<link rel="preload" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-<meta name="robots" content="noindex, nofollow" />
+		<meta rel="manifest" crossorigin="use-credentials" href="manifest.json" />
+		<meta name="robots" content="noindex, nofollow" />
 		%sveltekit.head%
 	</head>
 	<body data-theme="">
